--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -562,7 +562,7 @@ Erst nach dem bestehen aller hier aufgeführten Tests und Szenarien ist das Prod
       \end{enumerate}
 
 \section{Entwicklungsumgebung}
-Wir arbeiten an dem Projekt mit Visual Studio 2019, sodass alle eine einheitliche Entwicklungsumgebung verwenden.\\
+Wir arbeiten an dem Projekt mit Visual Studio 2017 oder neuer, sodass alle eine einheitliche Entwicklungsumgebung verwenden.\\
 Dabei kommt der .NET Standard 2.0 zum Einsatz, der C\# 7.2 verwendet. Wir arbeiten außerdem mit Xamarin Forms.\\
 Zur Versionskontrolle und zur Projektübersicht wird Git verwendet, das Repository liegt öffentlich auf Github\footnote{\url{https://github.com/vlle1/earablesKIT}}.
 \clearpage
