--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -212,8 +212,8 @@ Die Funktionalen Anforderungen gliedern sich in einen Pflichtteil (was unbedingt
     \subsubsection{Erweiterungsmodul}
       Weitere Datenauswertung:
       \begin{itemize}
-      \item[/F170/] \textsf{Erkennung Sit-ups} Das Erweiterungsmodul erkennt wann der \gls{Nutzer} Sit-ups macht.
-      \item[/F180/] \textsf{Erkennung Liegestütze} Das Erweiterungsmodul erkennt wann der \gls{Nutzer} Liegestütze macht.
+      \item[/F170/] \textsf{Erkennung Sit-ups} Das Erweiterungsmodul erkennt wann der Nutzer Sit-ups macht.
+      \item[/F180/] \textsf{Erkennung Liegestütze} Das Erweiterungsmodul erkennt wann der Nutzer Liegestütze macht.
       \end{itemize} 
     \subsubsection{App}
       Weitere Modi:
