Neues Architekturdiagramm, Ordnerstruktur verändert

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -289,12 +289,12 @@ Wie unten unter dem Punkt Qualitätszielbestimmungen aufgeführt legen wir unser
   \subsection{Architekturdiagramm}
   \begin{center}
   	\vspace{100px}
-  	\includegraphics[width=0.8\textwidth]{NeuesArchitekturdiagramm.png}
+  	\includegraphics[width=0.8\textwidth]{./Diagramme/NeuesArchitekturdiagramm.png}
   \end{center}
   
   \subsection{Use-Case-Diagramm}
   \begin{center}
-	\includegraphics[width=0.8\textwidth]{Use-CaseDiagramm.png} 
+	\includegraphics[width=0.8\textwidth]{./Diagramme/Use-CaseDiagramm.png} 
   \end{center}
 
 Kurzbeschreibung: Beim Starten der App durch den Nutzer startet automatisch der Laufmodus. Der Nutzer kann nun entweder den Modus wechseln oder einen \Gls{Vorgang} starten. Nach Beendigung oder Stoppen des Vorgangs wird das Vorgangsresultat angezeigt. Der Nutzer kann außerdem die Vorgangsdaten des letzten Monats einsehen und seine Daten importieren/exportieren. Das Ändern von Einstellungen und der damit verbundenen \Gls{Steuerungsparameter} der \Gls{Earables} ist ebenfalls möglich.
