Compile error behoben, Diagrammelemente vergrößert

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -289,7 +289,7 @@ Wie unten unter dem Punkt Qualitätszielbestimmungen aufgeführt legen wir unser
   \subsection{Architekturdiagramm}
   \begin{center}
   	\vspace{100px}
-  	\includegraphics[width=0.8\textwidth]{./Diagramme/NeuesArchitekturdiagramm.png}
+  	\includegraphics[width=0.8\textwidth]{./Diagramme/Archi3.png}
   \end{center}
   
   \subsection{Use-Case-Diagramm}
