Hardwareanforderungen: GB und MB groß schreiben

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -177,8 +177,8 @@ Unser Produkt besteht aus drei Teilen (der Bibliothek, dazu das Erweiterungsmodu
 Es handelt sich bei der App um eine Smartphoneanwendung, daher wird das Produkt als Installationspaket ausgeliefert. Außerdem setzen wir bestimmte Hardware- und Softwarebedingungen voraus.
 \subsection{Hardware} 
 	\textsf{Minimale Anforderungen:} Smartphone mit \Gls{BLE} Unterstützung.
-	\textsf{Leistungsanforderung:} Das Smartphone sollte mindestens 1 gb RAM besitzen
-	\textsf{Speicheranforderung:} Das Smartphone sollte mindestens 100 mb Speicherplatz zur Verfügung haben
+	\textsf{Leistungsanforderung:} Das Smartphone sollte mindestens 1 GB Arbeitsspeicher besitzen
+	\textsf{Speicheranforderung:} Das Smartphone sollte mindestens 100 MB Speicherplatz zur Verfügung haben
 \subsection{Software} \textsf{Betriebssystem:} Unterstützung nur von Android ab Version 7 und iOS ab Version 10.
 
 \section{Funktionale Anforderungen}
